# gbemu-lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/sdl/: CMakeLists.txt  main.cpp
include/gameboy/: gameboy.h
src/: address.cpp  address.h  bitwise.h  boot.h  cartridge.cc  cartridge.h  cartridge_info.cpp  cartridge_info.h  cli.cpp  cli.h  color.cpp  color.h  cpu.cpp  cpu.h  definitions.h  files.cpp  files.h  framebuffer.cpp  framebuffer.h  gameboy.cc  gameboy.cpp  gameboy.h  gb_string.h  joypad.cpp  joypad.h  log.cpp  log.h  mmu.cpp  mmu.h  op_cycles.h  op_names.h  opcodes.cpp  register.cpp  register.h  string.cpp  tile.cc  tile.h  timer.cpp  timer.h  video.cc  (+1 more)
tests/: CMakeLists.txt  test_lifecycle.cpp  test_loading.cpp
